fixed some homepage styling - added back culture zine banner and increased spacing between sections

--- a/src/presenters/pages/home-v2/styles.styl
+++ b/src/presenters/pages/home-v2/styles.styl
@@ -14,7 +14,8 @@
   font-weight: 600
 
 .homeSection + .homeSection
-  margin-top: 5em 
+  margin-top: 3em
+  margin-bottom: 3em
     
 .subtitle
   margin-left: u3
@@ -327,7 +328,7 @@
   padding: u2 0 u3
   &:before
     position: absolute
-    z-index: -1
+    z-index: 0
     content: ''
     top: 0
     width: 100vw
